--- a/packages/tsx-dom-ssg-demo/src/components/LinkButton/LinkButton.module.scss
+++ b/packages/tsx-dom-ssg-demo/src/components/LinkButton/LinkButton.module.scss
@@ -27,6 +27,5 @@
 .link-button-disabled {
     background: var(--color-disabled);
     color: var(--color-disabled-contrast);
-    opacity: 0.75;
     pointer-events: none;
 }
